[package]
name = "toycalc"
version = "0.1.0"
authors = ["David Holmes <dholmes@dholmes.us>"]

[dependencies]
libc = "0.2.0"
gio = "^0"
gtk = "^0"
relm = "^0.14.4"
relm-attributes = "^0.14.4"
relm-derive = "^0.14.4"

[[bin]]
name = "gtkrs_calculator"
path = "src/bin/gtkrs_calculator.rs"

[[bin]]
name = "relm_calculator"
path = "src/bin/relm_calculator.rs"
required-features = ["proc_macro"]
